Alteração no cargo do Jabez

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="googlebot" content="index, follow">
     <script src="assets/js/script.js" defer></script>
     <title>777PY | Seu palpite, nossa ciência!</title>
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="author" content="Calebe 'CL' Lukombo">
     <link rel="canonical" href="https://www.777py.com">
     <link rel="stylesheet" href="assets/css/output.css">
@@ -20,9 +21,8 @@
     <meta property="og:title" content="777PY - Previsões Inteligentes para Esportes, Política e Clima">
     <meta name="keywords" content="777py, 777Angola, 777, site de palpites, apostas, aposta em Angola, palpites, ciência, estatísticas">
     <meta property="og:description" content="O 777PY usa IA e estatísticas avançadas para prever eventos esportivos, políticos e climáticos com precisão.">
-    <meta name="description" content="Antecipe resultados com o 777PY - software de previsões desportivas, políticas e climáticas baseado em ciência, matemática e inteligência artificial.">
-    <meta name="mobile-web-app-capable" content="yes">
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <meta name="description" content="Antecipe resultados com o 777PY - software de previsões desportivas, políticas e climáticas baseado em ciência, matemática e inteligência artificial.">
     <noscript>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     </noscript>
@@ -234,21 +234,6 @@
                         <span>1</span>
                     </nav>
                     <nav class="iconeFuncione">
-                        <i class="fa-solid fa-brain"></i>
-                    </nav>
-                    <nav class="titleFunciona">
-                        <h4>Crie palpites certeiros</h4>
-                    </nav>
-                    <nav>
-                        <p class="textoFunciona">Crie os teus palpites certeiros nas modalidades que dominas: <span class="textoBold">futebol, boxe </span> ou <span class="textoBold">basquetebol</span>. Dentro dessas categorias, és livre para <span class="textoBold">escolher o mercado (código):</span> 1x2, totais, handicaps, etc. Decide se queres uma aposta simples, múltipla ou até mesmo construída. <span class="textoBold">Você é que manda!</span></p>
-                    </nav>
-                </nav>
-
-                <nav class="cardFunciona" id="card2">
-                    <nav class="numeroFunciona">
-                        <span>2</span>
-                    </nav>
-                    <nav class="iconeFuncione">
                         <i class="fa-solid fa-1"></i>-
                         <i class="fa-solid fa-2"></i>-
                         <i class="fa-solid fa-3"></i>
@@ -280,6 +265,21 @@
                                 </ul>
                             </nav>
                         </p>
+                    </nav>
+                </nav>
+
+                <nav class="cardFunciona" id="card2">
+                    <nav class="numeroFunciona">
+                        <span>2</span>
+                    </nav>
+                    <nav class="iconeFuncione">
+                        <i class="fa-solid fa-brain"></i>
+                    </nav>
+                    <nav class="titleFunciona">
+                        <h4>Crie palpites certeiros</h4>
+                    </nav>
+                    <nav>
+                        <p class="textoFunciona">Crie os teus palpites certeiros nas modalidades que dominas: <span class="textoBold">futebol, boxe </span> ou <span class="textoBold">basquetebol</span>. Dentro dessas categorias, és livre para <span class="textoBold">escolher o mercado (código):</span> 1x2, totais, handicaps, etc. Decide se queres uma aposta simples, múltipla ou até mesmo construída. <span class="textoBold">Você é que manda!</span></p>
                     </nav>
                 </nav>
 
@@ -483,7 +483,7 @@
                         Nacho
                     </nav>
                     <nav class="statusFundador">
-                        Co-Diretor de Operações (Co-COO) e fundador
+                        Diretor de Produto (CPO) e fundador
                     </nav>
                     <nav class="sobreFundador">777 é feita de pessoas que desafiam os limites durante 10 dias. Pessoas que acreditam no impossível - são os nossos recursos mais valioso.</nav>
                     <div class="efeitoCard11 efeitoCard"></div>
