Alteração dos dizeres do vídeo

--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
         </section>
 
         <section class="secao secao7" id="video">
-            <h4 class="textoSecao7">Se ainda tiver <span class="textoGradiente">dúvidas</span> ou precisar de mais <span class="textoGradiente">esclarecimentos</span>, assista o <span class="textoGradiente">vídeo explicativo</span> <span class="textoGradiente">criado </span>especialmente <span class="textoGradiente">para você</span>.</h4>
+            <h4 class="textoSecao7">Se ainda tiver <span class="textoGradiente">dúvidas</span>, assista o <span class="textoGradiente">vídeo exclusivo</span> <span class="textoGradiente">com as inteligências artificiais </span>desenvolvidas pela<span class="textoGradiente"> equipe do 777PY.</span></h4>
             <nav class="navVideoExplicativo">
                 <video src="assets/video/video777py.mp4" class="videoExplicativo" controls></video>
             </nav>
