Melhoria no formulário

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="shortcut icon" href="assets/img/logo_ico.ico" type="image/x-icon">
     <meta property="og:image" content="https://www.777py.com/imagens/777py-cover.png">
     <meta property="og:title" content="777PY - Previsões Inteligentes para Esportes, Política e Clima">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="keywords" content="777py, 777Angola, 777, site de palpites, apostas, aposta em Angola, palpites, ciência, estatísticas">
     <meta property="og:description" content="O 777PY usa IA e estatísticas avançadas para prever eventos esportivos, políticos e climáticos com precisão.">
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
