--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                         <nav class="contentInputForm">
                             <nav class="navContentCheck">
                                 <nav>
-                                    <span>Ao enviar!!!, você aceita a <a href="views/politica.html">Política de Privacidade</a> e os <a href="views/termos.html">Termos e Condições</a> da 777PY</span>
+                                    <span>Ao envia***, você aceita a <a href="views/politica.html">Política de Privacidade</a> e os <a href="views/termos.html">Termos e Condições</a> da 777PY</span>
                                 </nav>
                             </nav>
                         </nav>
