Novas funcionalidades no form

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                         </nav>
 
                         <nav>
-                            <nav class="navBtns navBtnsForm">
+                            <nav class="navBtns">
                                 <a href="#"><button class="btn btn0" type="reset" id="cancelarForm">Cancelar</button></a>
                                 <a href="#"><button class="btn">Palpitar Agora <i class="fa-solid fa-paper-plane"></i></button></a>
                             </nav>
