--- a/index.html
+++ b/index.html
@@ -171,17 +171,22 @@
                             <h5 style="text-align: center;">Entender o teu racicínio, será ser útil para o nosso software brevemente</h5>
                         </nav>
                     </div>
-
+                    <nav>
+                        <nav class="navBtns navBtnsForm">
+                            <a href="#"><button class="btn btn0" type="reset" id="cancelarForm">Cancelar</button></a>
+                            <a href="#"><button class="btn">Palpitar Agora <i class="fa-solid fa-paper-plane"></i></button></a>
+                        </nav>
+                    </nav>
                         <nav class="contentInputForm">
                             <nav class="navContentCheck">
                                 <nav>
-                                    <span>Ao enviarC, você aceita a <a href="views/politica.html">Política de Privacidade</a> e os <a href="views/termos.html">Termos e Condições</a> da 777PY</span>
+                                    <span>Ao enviar, você aceita a <a href="views/politica.html">Política de Privacidade</a> e os <a href="views/termos.html">Termos e Condições</a> da 777PY</span>
                                 </nav>
                             </nav>
                         </nav>
 
                         <nav>
-                            <nav class="navBtns">
+                            <nav class="navBtns navBtnsForm">
                                 <a href="#"><button class="btn btn0" type="reset" id="cancelarForm">Cancelar</button></a>
                                 <a href="#"><button class="btn">Palpitar Agora <i class="fa-solid fa-paper-plane"></i></button></a>
                             </nav>
