--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                         </nav>
                     </div>
                     <nav>
-                        <nav class="navBtns navBtnsForm">
+                        <nav class="navBtns navBtnsForm navBtnsForm0">
                             <a href="#"><button class="btn btn0" type="reset" id="cancelarForm">Cancelar</button></a>
                             <a href="#"><button class="btn">Palpitar Agora <i class="fa-solid fa-paper-plane"></i></button></a>
                         </nav>
@@ -186,7 +186,7 @@
                         </nav>
 
                         <nav>
-                            <nav class="navBtns navBtnsForm">
+                            <nav class="navBtns navBtnsForm navBtnsForm1">
                                 <a href="#"><button class="btn btn0" type="reset" id="cancelarForm">Cancelar</button></a>
                                 <a href="#"><button class="btn">Palpitar Agora <i class="fa-solid fa-paper-plane"></i></button></a>
                             </nav>
