Scroll ao processar

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </script>
 </head>
 
-<body draggable="false">
+<body draggable="false" class="semScroll">
     <div id="preloader">
         <div class="preloader-container">
           <img src="assets/img/loader.gif" alt="Carregando..." class="preloader-gif" draggable="false">
@@ -173,21 +173,21 @@
                     </div>
                     <nav>
                         <nav class="navBtns navBtnsForm navBtnsForm0">
-                            <a href="#"><button class="btn btn0" type="reset" id="cancelarForm">Cancelar</button></a>
+                            <a href="#"><button class="btn btn0 cancelarForm" type="reset">Cancelar</button></a>
                             <a href="#"><button class="btn">Palpitar Agora <i class="fa-solid fa-paper-plane"></i></button></a>
                         </nav>
                     </nav>
                         <nav class="contentInputForm">
                             <nav class="navContentCheck">
                                 <nav>
-                                    <span>Ao enviar, você aceita a <a href="views/politica.html">Política de Privacidade</a> e os <a href="views/termos.html">Termos e Condições</a> da 777PY</span>
+                                    <span>Ao enviar, você declara que leu e concorda com a utilização das informações fornecidas, conforme previsto na <a href="views/politica.html">Política de Privacidade</a> e nos <a href="views/termos.html">Termos e Condições</a> da 777PY</span>
                                 </nav>
                             </nav>
                         </nav>
 
                         <nav>
                             <nav class="navBtns navBtnsForm navBtnsForm1">
-                                <a href="#"><button class="btn btn0" type="reset" id="cancelarForm">Cancelar</button></a>
+                                <a href="#"><button class="btn btn0 cancelarForm" type="reset">Cancelar</button></a>
                                 <a href="#"><button class="btn">Palpitar Agora <i class="fa-solid fa-paper-plane"></i></button></a>
                             </nav>
                         </nav>
