Correção de erros no formulário

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                                     <textarea name="" id="" placeholder="Porque você acredita neste palpite?" required></textarea>
                                 </nav>
                             </nav>
-                            <h5 style="text-align: center;">Entender o teu racicínio, será ser útil para o nosso software brevemente</h5>
+                            <h5 style="text-align: center;">Entender o teu racicínio, será útil para o nosso software brevemente</h5>
                         </nav>
                     </div>
                     <nav>
