Implementação do Vídeo e controladores do vídeo

--- a/index.html
+++ b/index.html
@@ -626,7 +626,19 @@
         <section class="secao secao7" id="video">
             <h4 class="textoSecao7">Se ainda tiver <span class="textoGradiente">dúvidas</span>, assista o <span class="textoGradiente">vídeo exclusivo</span> <span class="textoGradiente">com as inteligências artificiais </span>desenvolvidas pela<span class="textoGradiente"> equipe do 777PY.</span></h4>
             <nav class="navVideoExplicativo">
-                <video src="assets/video/video777py.mp4" class="videoExplicativo" controls></video>
+                <video src="assets/video/video777py.mp4" class="videoExplicativo"></video>
+                <nav class="navControlesVideo">
+                    <nav>
+                        <i class="fa-solid fa-backward"></i>
+                        <i class="fa-solid fa-play"></i>
+                        <i class="fa-solid fa-forward"></i>
+                    </nav>
+                    <nav>
+                        <a href="assets/video/ava_ia_777py.mp4" download="ava_ia_777py">
+                           <button class="btn">Baixar Vídeo</button>
+                        </a>
+                    </nav>
+                </nav>
             </nav>
         </section>
         
