--- a/index.html
+++ b/index.html
@@ -632,6 +632,7 @@
                         <i class="fa-solid fa-backward"></i>
                         <i class="fa-solid fa-play"></i>
                         <i class="fa-solid fa-forward"></i>
+                        <i class="fa-solid fa-expand"></i>
                     </nav>
                     <nav>
                         <a href="assets/video/ava_ia_777py.mp4" download="ava_ia_777py">
