Mlehoria no texto da section

--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                     <nav class="statusFundador">
                         Diretor de Produto (CPO) e fundador
                     </nav>
-                    <nav class="sobreFundador">777 é feita de pessoas que desafiam os limites durante 10 dias. Pessoas que acreditam no impossível - são os nossos recursos mais valioso.</nav>
+                    <nav class="sobreFundador">777 é feita de pessoas que desafiam os limites durante 10 dias.</nav>
                     <div class="efeitoCard11 efeitoCard"></div>
                 </nav>
 
@@ -624,7 +624,7 @@
         </section>
 
         <section class="secao secao7" id="video">
-            <h4 class="textoSecao7">Se ainda tiver <span class="textoGradiente">dúvidas</span>, assista o <span class="textoGradiente">vídeo exclusivo</span> <span class="textoGradiente">com as inteligências artificiais </span>desenvolvidas pela<span class="textoGradiente"> equipe do 777PY.</span></h4>
+            <h4 class="textoSecao7">Se ainda tiver <span class="textoGradiente">dúvidas</span>, assista o <span class="textoGradiente">vídeo exclusivo</span> <span class="textoGradiente">com a AVA666_</span> IA desenvolvida pela<span class="textoGradiente"> equipe do 777PY.</span></h4>
             <nav class="navVideoExplicativo">
                 <video src="assets/video/video777py.mp4" class="videoExplicativo"></video>
                 <nav class="navControlesVideo">
