Adição da imagem na seção 3

--- a/index.html
+++ b/index.html
@@ -374,6 +374,9 @@
 
                     <p class="paragrafosSecao3">Se chegaste até a 777, é porque dentro de ti existe um sonhador, um pensador, um visionário. Se estás aqui, és alguém que vê o jogo diferente, que sente o momento, analisa, conecta os pontos e transforma palpite em 2.5 milhões em 10 dias. Acreditamos no teu talento, na tua leitura de jogo, na tua coragem e na tua vontade de ser milionário em 10 dias. Entra nesse desafio com confiança, mostre o teu raciocínio.</p>
                 </nav>
+                <nav>
+                    <img src="assets/img/img.gif" alt="imagem de um homem com camiseta do 777PY celebrando" srcset="assets/img/img.gif">
+                </nav>
             </div>
         </section>
 
